<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/text_account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_catalog"
        android:enabled="true"
        android:icon="@drawable/ic_map_marker_multiple"
        android:title="@string/text_catalog"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/text_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/text_settings"
        app:showAsAction="ifRoom" />
</menu>